--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ A:hover {text-decoration: none; color: green;}
 <div class='clear'></div>
 <footer>
 	<div id="button2">
-	공지사항
+	공지사항 & 안내
 	</div> <br> <br>
 	<h7>-2022.04.24 [안내] 결제 이벤트 시행 안내 <br> <br> <br>
 
